[refator] feature/chat 채팅 기능 코ë드 리팩토링