@@ -12,7 +12,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,55 +19,42 @@ public class ApprovalServiceImpl implements ApprovalService {
 
     private final LeaveRequestRepository leaveRequestRepository;
 
-    @Override
-    public LeaveApprovalResponse processApproval(Long requestId, Long employeeId, LeaveApprovalRequest approvalRequest) {
-        LeaveRequest leaveRequest = leaveRequestRepository.findById(requestId)
+    private LeaveRequest getLeaveRequest(Long id) {
+        return leaveRequestRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("연차 요청 정보를 찾을 수 없습니다."));
+    }
 
+    @Override
+    public LeaveApprovalResponse processApproval(Long requestId, Long employeeId, LeaveApprovalRequest req) {
+        LeaveRequest leaveRequest = getLeaveRequest(requestId);
+        ApprovalStatus status = req.getApprovalStatus();
 
-        if (approvalRequest.getApprovalStatus() == ApprovalStatus.APPROVED) {
+        if (status == ApprovalStatus.APPROVED) {
             leaveRequest.setStatus(ApprovalStatus.APPROVED);
             leaveRequest.setRejectReason(null);
-        } else if (approvalRequest.getApprovalStatus() == ApprovalStatus.REJECTED) {
+        } else if (status == ApprovalStatus.REJECTED) {
             leaveRequest.setStatus(ApprovalStatus.REJECTED);
-            leaveRequest.setRejectReason(approvalRequest.getRejectReason());
-            // 반려사유는 엔티티에 저장하지 않고, 아래에서 응답 DTO에만 세팅
+            leaveRequest.setRejectReason(req.getRejectReason());
         } else {
             throw new IllegalArgumentException("잘못된 승인 상태입니다.");
         }
 
         leaveRequestRepository.save(leaveRequest);
 
-        // 응답 DTO 생성 (반려사유는 DTO에만 세팅)
         LeaveApprovalResponse response = LeaveApprovalResponse.fromEntity(leaveRequest);
-        if (approvalRequest.getApprovalStatus() == ApprovalStatus.REJECTED) {
-            response.setRejectReason(approvalRequest.getRejectReason());
-        }
+        if (status == ApprovalStatus.REJECTED) response.setRejectReason(req.getRejectReason());
         return response;
     }
 
     @Override
     public List<LeaveRequestResponse> getPendingRequests(Long employeeId) {
-        List<LeaveRequest> pendingRequests = leaveRequestRepository
-                .findByStatus(ApprovalStatus.PENDING);
-
-        return pendingRequests.stream()
-                .map(LeaveRequestResponse::fromEntity)
-                .collect(Collectors.toList());
+        return leaveRequestRepository.findByStatus(ApprovalStatus.PENDING)
+                .stream().map(LeaveRequestResponse::fromEntity).toList();
     }
 
-
-    // [추가] 완료(승인/반려) 목록 조회
     @Override
     public List<LeaveRequestResponse> getCompletedRequests(Long employeeId) {
-        // 상태가 APPROVED 또는 REJECTED인 연차 요청만 조회
-        List<LeaveRequest> completedRequests = leaveRequestRepository
-                .findByStatusIn(Arrays.asList(ApprovalStatus.APPROVED, ApprovalStatus.REJECTED));
-
-        return completedRequests.stream()
-                .map(LeaveRequestResponse::fromEntity)
-                .collect(Collectors.toList());
+        return leaveRequestRepository.findByStatusIn(Arrays.asList(ApprovalStatus.APPROVED, ApprovalStatus.REJECTED))
+                .stream().map(LeaveRequestResponse::fromEntity).toList();
     }
-
-
 }
